--- a/package.json
+++ b/package.json
@@ -1,39 +1,26 @@
 {
-  "name": "react-sk-ts",
+  "name": "react-starter-kit-wb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "gulp",
+    "start": "node ./node_modules/.bin/webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ravi Ojha <rbojha008@gmail.com>",
   "license": "ISC",
-  "devDependencies": {
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-shell": "^0.6.3",
-    "gulp-sym": "^1.0.2",
-    "gulp-watch": "^4.3.11",
-    "jspm": "^0.16.53",
-    "run-sequence": "^1.2.2"
-  },
   "dependencies": {
-    "@types/react": "^15.0.16",
-    "@types/react-dom": "^0.14.23",
-    "@types/redux": "^3.6.0",
-    "typescript": "^2.2.1"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "redux": "^3.6.0"
   },
-  "jspm": {
-    "dependencies": {
-      "react": "npm:react@^15.4.2",
-      "react-dom": "npm:react-dom@^15.4.2",
-      "redux": "npm:redux@^3.6.0"
-    },
-    "devDependencies": {
-      "typescript": "npm:typescript@^2.0.7"
-    }
+  "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-1": "^6.22.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
