--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
+    "eslint": "^3.19.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   }
