--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Ravi Ojha <rbojha008@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
