--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
     "react-sparklines": "^1.6.0",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3"
@@ -26,6 +27,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
     "eslint": "^3.19.0",
+    "react-router-dom": "^4.1.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   }
